--- a/4-react-typescript/client/package.json
+++ b/4-react-typescript/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "redux-web3": "github:SandyLudosky/redux-web3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4"
